{
  "version": 4,
  "terraform_version": "0.15.1",
  "serial": 216,
  "lineage": "e35ce9ff-fba0-8064-eca8-097fd450b3c1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_task5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ab4d1e9cf9a1215a",
            "arn": "arn:aws:ec2:us-east-1:965777747972:instance/i-02d6da661c19042b1",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02d6da661c19042b1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "task-5",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-058d2c2bc5d49af67",
            "private_dns": "ip-10-0-1-122.ec2.internal",
            "private_ip": "10.0.1.122",
            "public_ip": "35.173.196.216",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-098b24181ec89e651",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04be4f00717f6fe56",
            "tags": {
              "Name": "EC2 task5"
            },
            "tags_all": {
              "Name": "EC2 task5"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-043aaa4a5cbb41efd"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_task5",
            "aws_subnet.subnet_task5",
            "aws_vpc.vpc_task5"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw_task5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:965777747972:internet-gateway/igw-0ca0002864ac9bb03",
            "id": "igw-0ca0002864ac9bb03",
            "owner_id": "965777747972",
            "tags": {
              "Name": "GW task5"
            },
            "tags_all": {
              "Name": "GW task5"
            },
            "vpc_id": "vpc-00533b62faf4b48b6"
          },
          "dependencies": [
            "aws_vpc.vpc_task5"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:965777747972:route-table/rtb-0deba59af45a4f8e9",
            "id": "rtb-0deba59af45a4f8e9",
            "owner_id": "965777747972",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ca0002864ac9bb03",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RT task5"
            },
            "tags_all": {
              "Name": "RT task5"
            },
            "vpc_id": "vpc-00533b62faf4b48b6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw_task5",
            "aws_vpc.vpc_task5"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06755f14e4f57e4ca",
            "route_table_id": "rtb-0deba59af45a4f8e9",
            "subnet_id": "subnet-04be4f00717f6fe56"
          },
          "dependencies": [
            "aws_internet_gateway.gw_task5",
            "aws_route_table.rt",
            "aws_subnet.subnet_task5",
            "aws_vpc.vpc_task5"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_task5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:965777747972:security-group/sg-043aaa4a5cbb41efd",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-043aaa4a5cbb41efd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20210705111331155900000001",
            "name_prefix": "terraform-",
            "owner_id": "965777747972",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG task5"
            },
            "tags_all": {
              "Name": "SG task5"
            },
            "timeouts": null,
            "vpc_id": "vpc-00533b62faf4b48b6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_task5"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_task5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:965777747972:subnet/subnet-04be4f00717f6fe56",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-04be4f00717f6fe56",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "965777747972",
            "tags": {
              "Name": "Subnet-task5"
            },
            "tags_all": {
              "Name": "Subnet-task5"
            },
            "vpc_id": "vpc-00533b62faf4b48b6"
          },
          "dependencies": [
            "aws_vpc.vpc_task5"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_task5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:965777747972:vpc/vpc-00533b62faf4b48b6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-080e6253f96815cd0",
            "default_route_table_id": "rtb-00f37727d9e6282c5",
            "default_security_group_id": "sg-0e1250e679a662398",
            "dhcp_options_id": "dopt-d6dff4ac",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-00533b62faf4b48b6",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00f37727d9e6282c5",
            "owner_id": "965777747972",
            "tags": {
              "Name": "lwterra"
            },
            "tags_all": {
              "Name": "lwterra"
            }
          }
        }
      ]
    }
  ]
}